<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="no_note">No notes found.</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="create">Create Note</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="search">Search</string>
    <string name="search_hint">Search your notes</string>

    <string name="newestFirst">Newest first</string>
    <string name="oldestFirst">Oldest first</string>
    <string name="all_notes">All notes</string>
    <string name="media_only">Notes with media only</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
