<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.ShowNotesFragment">

    <data>

        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.vivek.notes.viewmodel.ShowNotesViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/noNotestv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.VISIBLE:View.GONE}"
            android:text="@string/no_note"
            app:layout_constraintBottom_toTopOf="@+id/guideline" />


        <TextView
            android:id="@+id/addNotesBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/add_note"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.VISIBLE:View.GONE}"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.GONE:View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.GONE:View.VISIBLE}"
            android:text="@string/sort"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/filter"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filter"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sortTv" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24dp"
            android:visibility="@{viewModel.allNotes.size() == 0 ? View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:useCompatPadding="true"
            android:id="@+id/addFab"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>