<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.AddNoteFragment">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.vivek.notes.viewmodel.AddNoteViewModel" />

        <variable
            name="obj"
            type="com.vivek.notes.model.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:id="@+id/addTitleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/addTitleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}"
                android:hint="@string/add_title"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:id="@+id/addDescTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addTitleTextInputLayout">

            <EditText
                android:id="@+id/addDescEt"
                android:text="@={viewModel.desc}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="@id/addTitleTextInputLayout"
            app:layout_constraintStart_toStartOf="@id/addTitleTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/addDescTextInputLayout" />


        <TextView
            style="@style/ButtonStyle"
            android:id="@+id/createTv"
            android:layout_width="0dp"
            android:gravity="center"
            android:onClick="@{viewModel::createNote}"
            android:text="@string/create"
            android:enabled="false"
            android:background="@color/colorGray"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>